fix(styles): Move tag dialog In some scenarios, the tag dialog got cut off by the edge of the screen.  Now in some scnearios it covers the button or looks a little awkward, but at least it's all readable.  We can worry about making it extra-pretty once the functionality is there.

--- a/frontend/memecataloger/src/app/_styles/TagButton.css
+++ b/frontend/memecataloger/src/app/_styles/TagButton.css
@@ -1,7 +1,7 @@
 .tag-editor-container {
   position: relative;
   margin-left: auto;
-  margin-right: 2vw;
+  margin-right: 5vw;
 }
 
 .tag-button {
